# contimask

./: README.md  attribute.py  config.py  eval.py  mask_examples.ipynb  pyproject.toml  rare_feature_temp.py  rare_feature_value.py  rare_time_temp.py  rare_time_value.py  results.ipynb  sepsis_attribution.py
attribution/: mask_conti.py  perturbation_conti.py
checkpoints/: best_model.pt  norm_stats.pt  pretrained_backbone.pt  test_predictions.csv
data/: dataset.py  split.py
docs/: sepsis-training-and-attribution.md
docs/superpowers/plans/: 2026-05-18-sepsis-diffusiontransformer.md  2026-05-25-mask-subsampling.md  2026-05-29-attribution-analysis.md
docs/superpowers/specs/: 2026-05-12-sepsis-diffusion-contimask-design.md  2026-05-18-sepsis-diffusiontransformer-option1-design.md  2026-05-25-mask-subsampling-design.md  2026-05-29-attribution-analysis-design.md
models/: diffusion_transformer.py  embeddings.py
tests/: conftest.py  test_attribution.py
tests/attribution/: test_retention.py  test_subsample_mask.py
tests/data/: test_dataset.py  test_split.py
tests/models/: test_diffusion_transformer.py  test_embeddings.py
tests/training/: test_loops.py  test_schedule.py
training/: finetune.py  pretrain.py  schedule.py  train.py
utils/: early_stopping.py  losses.py  metrics.py  tools.py
