[project]
name = "contimask"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "evotorch==0.5.1",
    "isort>=8.0.1",
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "pip==25.0",
    "ruff>=0.15.12",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "pandas>=2.0",
    "pytest>=8.0",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
